--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,8 +3,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -15,9 +15,11 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
 p {
   margin: 0;
 }
+
 #app {
   height: 100%;
   color: $font-color;
@@ -50,16 +52,18 @@ a {
   padding: 15px 12px 0;
   letter-spacing: 1px;
 }
+
 .title-name {
   font-size: 18px;
   font-family: PingFang SC-Bold, PingFang SC;
   font-weight: bold;
   color: #333333;
 }
+
 .title-dsc {
   font-size: 12px;
   font-family: PingFang SC-常规体, PingFang SC;
   font-weight: normal;
-  color: #7d838a;
+  color: #7D838A;
   line-height: 24px;
 }
